--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
       <button id="addBtn">Add</button>
     </div>
 
+    <div class="stats">
+      <p id="taskCount">Total: 0 | Pending: 0</p>
+    </div>
+
+    <div class="filters">
+      <button class="filter-btn active" data-filter="all">All</button>
+      <button class="filter-btn" data-filter="pending">Pending</button>
+      <button class="filter-btn" data-filter="completed">Completed</button>
+    </div>
+
     <ul id="taskList"></ul>
+
+    <div class="actions">
+      <button id="clearCompleted">✅ Clear Completed</button>
+      <button id="clearAll">🗑️ Clear All</button>
+    </div>
 
     <p class="info">✅ Click a task to mark complete • ❌ Delete anytime</p>
   </div>
